salesforce/omnishift-sf/force-app/main/default/objects/Lead/fields/Omnishift_Disposition_Reason__c.field-meta.xml
<CustomField>
    <fullName>Omnishift_Disposition_Reason__c</fullName>
    <label>Omnishift Disposition Reason</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>