salesforce/omnishift-sf/force-app/main/default/objects/Lead/fields/Omnishift_Draft_Subject__c.field-meta.xml
<CustomField>
    <fullName>Omnishift_Draft_Subject__c</fullName>
    <description>Subject of the drafted outreach message.</description>
    <label>Omnishift Draft Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>