salesforce/omnishift-sf/force-app/main/default/objects/Lead/fields/Omnishift_Escalated__c.field-meta.xml
<CustomField>
    <fullName>Omnishift_Escalated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A high-value prospect was surfaced and the people who take a second look were told. The client described this on the call: above a threshold the distribution loops in leadership. Set once, so the same record does not notify every night.</description>
    <label>Omnishift Escalated</label>
    <type>Checkbox</type>
</CustomField>