salesforce/omnishift-sf/force-app/main/default/objects/Lead/fields/Omnishift_Escalated_On__c.field-meta.xml
<CustomField>
    <fullName>Omnishift_Escalated_On__c</fullName>
    <label>Omnishift Escalated On</label>
    <type>DateTime</type>
</CustomField>