salesforce/omnishift-sf/force-app/main/default/objects/Lead/fields/Omnishift_Next_Action_Date__c.field-meta.xml
<CustomField>
    <fullName>Omnishift_Next_Action_Date__c</fullName>
    <description>Drives the &quot;today&quot; list view filter.</description>
    <label>Omnishift Next Action Date</label>
    <type>Date</type>
</CustomField>