salesforce/omnishift-sf/force-app/main/default/objects/Lead/fields/Omnishift_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Omnishift_Outcome__c</fullName>
    <label>Omnishift Outcome</label>
    <type>Picklist</type>
    <description>What happened with the prospect. The disposition records what the advisor did with the draft; this records whether the recommendation was any good. It is the label the ranking learns from, so it is restricted - an unrestricted training label drifts, and a drifted label teaches the wrong thing.</description>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Meeting booked</fullName><default>false</default><label>Meeting booked</label></value>
            <value><fullName>Replied, no meeting</fullName><default>false</default><label>Replied, no meeting</label></value>
            <value><fullName>No response</fullName><default>false</default><label>No response</label></value>
            <value><fullName>Not interested</fullName><default>false</default><label>Not interested</label></value>
            <value><fullName>Too early</fullName><default>false</default><label>Too early</label></value>
            <value><fullName>Should not have been surfaced</fullName><default>false</default><label>Should not have been surfaced</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>