salesforce/omnishift-sf/force-app/main/default/objects/Lead/fields/Omnishift_Outcome_On__c.field-meta.xml
<CustomField>
    <fullName>Omnishift_Outcome_On__c</fullName>
    <label>Omnishift Outcome On</label>
    <type>DateTime</type>
    <description>When the outcome was recorded. Without it there is no way to measure how long a recommendation takes to convert, or to weight recent evidence above old.</description>
</CustomField>