salesforce/omnishift-sf/force-app/main/default/objects/Lead/fields/Omnishift_Quarantine_Reason__c.field-meta.xml
<CustomField>
    <fullName>Omnishift_Quarantine_Reason__c</fullName>
    <description>Which rule held the record back, in the rule&apos;s own words, so it can be argued with.</description>
    <label>Omnishift Quarantine Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>