salesforce/omnishift-sf/force-app/main/default/objects/Lead/fields/Omnishift_Quarantined__c.field-meta.xml
<CustomField>
    <fullName>Omnishift_Quarantined__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The agent held this record back rather than surfacing it. Set so the decision is auditable: a suppression nobody can see is indistinguishable from a record the agent never found.</description>
    <label>Omnishift Quarantined</label>
    <type>Checkbox</type>
</CustomField>