salesforce/omnishift-sf/force-app/main/default/objects/Lead/fields/Omnishift_Rank_Score__c.field-meta.xml
<CustomField>
    <fullName>Omnishift_Rank_Score__c</fullName>
    <label>Omnishift Rank Score</label>
    <type>Number</type>
    <precision>10</precision>
    <scale>3</scale>
    <description>The uncapped score, used only for ordering. The displayed score is bounded at 100 so it reads as a percentage; ordering on the bounded figure made records tie at the ceiling and lose their true sequence.</description>
</CustomField>