salesforce/omnishift-sf/force-app/main/default/objects/Lead/fields/Omnishift_Recommended_Owner__c.field-meta.xml
<CustomField>
    <fullName>Omnishift_Recommended_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Advisory only. Never write OwnerId in bulk - ownership changes force sharing recalculation across the role hierarchy.</description>
    <label>Omnishift Recommended Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Omnishift Recommended Leads</relationshipLabel>
    <relationshipName>Omnishift_Recommended_Leads</relationshipName>
    <type>Lookup</type>
</CustomField>