salesforce/omnishift-sf/force-app/main/default/objects/Lead/fields/Omnishift_Score__c.field-meta.xml
<CustomField>
    <fullName>Omnishift_Score__c</fullName>
    <label>Omnishift Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>